--- a/docker/flask_image/dockerfile_python.df
+++ b/docker/flask_image/dockerfile_python.df
@@ -9,11 +9,11 @@ RUN pip3 install sqlalchemy
 
 RUN yum install wget -y
 RUN wget https://raw.githubusercontent.com/kayaru28/training_set/master/docker/flask_image/flask_base.py
-RUN wget https://raw.githubusercontent.com/kayaru28/training_set/master/docker/flask_image/html.zip
+RUN wget https://raw.githubusercontent.com/kayaru28/training_set/master/docker/flask_image//templates.zip
 RUN wget https://raw.githubusercontent.com/kayaru28/training_set/master/docker/flask_image/mysql_proc.py
 
 RUN yum install unzip -y
-RUN unzip html.zip
+RUN unzip templates.zip
 
 RUN yum install iproute -y
 
