modify df for ssh-client downlording

--- a/docker/flask_image/dockerfile_python.df
+++ b/docker/flask_image/dockerfile_python.df
@@ -13,7 +13,7 @@ RUN yum install iproute -y
 RUN yum install openssh-clients -y
 
 ARG ip_host=10.255.255.1
-scp root@${ip_host}:/root/dockerfiles/001_python_tool/secret.txt /root/
+RUN scp root@${ip_host}:/root/dockerfiles/001_python_tool/secret.txt /root/
 
 ARG download_zip="app-python.zip"
 RUN wget https://raw.githubusercontent.com/kayaru28/training_set/master/docker/flask_image/${download_zip}
