--- a/docker/flask_image/dockerfile_mysql.df
+++ b/docker/flask_image/dockerfile_mysql.df
@@ -9,6 +9,6 @@ RUN yum install wget -y
 RUN yum install openssh-clients -y
 
 ARG ip_host=10.255.255.1
-scp root@${ip_host}:/root/dockerfiles/001_python_tool/secret.txt /root/
+RUN scp root@${ip_host}:/root/dockerfiles/001_python_tool/secret.txt /root/
 
 RUN systemctl enable mysqld
