--- a/docker/flask_image/dockerfile_mysql.df
+++ b/docker/flask_image/dockerfile_mysql.df
@@ -1,13 +1,2 @@
-FROM centos:7
-
-RUN yum localinstall http://dev.mysql.com/get/mysql57-community-release-el7-7.noarch.rpm -y
-
-RUN yum install mysql-community-server -y
-
-RUN yum install iproute -y
-RUN yum install wget -y
-
-RUN systemctl enable mysqld
-
-CMD ["sh","/root/setup/setup_rps_mysql.sh"]
+FROM mysql:latest
 
