--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -2,7 +2,8 @@
   @type forward
   @label @mainstream
   port 24220
-
+</source>
+<source>
   @type http
   @label @mainstream
   port 24280
@@ -18,7 +19,7 @@
     path         /fluentd/log/data.*.log
     symlink_path /fluentd/log/data.log
     append       true
-    time_slice_format %Y%m%d
+    time_slice_format %Y%m%d%H%M
     time_slice_wait   1m
     time_format       %Y%m%dT%H%M%S%z
   </match>
