--- a/docker/flask_image/dockerfile_python.df
+++ b/docker/flask_image/dockerfile_python.df
@@ -16,11 +16,14 @@ RUN yum install python3-devel -y
 RUN yum install gcc -y
 RUN pip3 install mysqlclient
 
+RUN yum install cronie -y
+
+RUN pip3 install fluent-logger
 
 ENV LC_ALL en_US.UTF-8
 ENV FLASK_APP /flask_base.py
 
-ENTRYPOINT  source /root/setup/setup_rps_flask.sh
+ENTRYPOINT  source /setup/setup_rps_flask.sh
 
 
 
