update : rm symlink

--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -17,9 +17,8 @@
     @type file
     @id   output1
     path         /fluentd/log/data.*.log
-    symlink_path /fluentd/log/data.log
     append       true
-    time_slice_format %Y%m%d%H%M
+    time_slice_format %Y%m%d%H
     time_slice_wait   1m
     time_format       %Y%m%dT%H%M%S%z
   </match>
