--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -1,7 +1,12 @@
 <source>
   @type forward
-  @label @mainstream
+  @label @flask
   port 24220
+</source>
+<source>
+  @type forward
+  @label @sql
+  port 24221
 </source>
 <source>
   @type http
@@ -23,4 +28,27 @@
     time_format       %Y%m%dT%H%M%S%z
   </match>
 </label>
+<label @flask>
+  <match **>
+    @type file
+    @id   output_flask
+    path         /fluentd/log/app_log.*.log
+    append       true
+    time_slice_format %Y%m%d%H
+    time_slice_wait   1m
+    time_format       %Y%m%dT%H%M%S%z
+  </match>
+</label>
+<label @sql>
+  <match **>
+    @type file
+    @id   output_sql
+    path         /fluentd/log/sql_log.*.log
+    append       true
+    time_slice_format %Y%m%d%H
+    time_slice_wait   1m
+    time_format       %Y%m%dT%H%M%S%z
+  </match>
+</label>
+
 
