--- a/docker/flask_image/docker-compose.yml
+++ b/docker/flask_image/docker-compose.yml
@@ -50,7 +50,8 @@ services:
     container_name: fluentd
     networks:
       - backend
-    expose: # default port 5140/tcp,24224/tcp
+    expose:
+      # default port 5140/tcp,24224/tcp
       - '24220'
       - '24221'
       - '24280'
