--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -13,6 +13,7 @@
   @label @mainstream
   port 24280
 </source>
+
 <filter **>
   @type stdout
 </filter>
@@ -30,13 +31,23 @@
 </label>
 <label @flask>
   <match **>
-    @type file
-    @id   output_flask
-    path         /fluentd/log/app_log.*.log
-    append       true
-    time_slice_format %Y%m%d%H
-    time_slice_wait   1m
-    time_format       %Y%m%dT%H%M%S%z
+    @type copy
+    <store>
+      @type file
+      @id   output_flask
+      path         /fluentd/log/app_log.*.log
+      append       true
+      time_slice_format %Y%m%d%H
+      time_slice_wait   1m
+      time_format       %Y%m%dT%H%M%S%z
+    </store>
+    <store>
+      @type elasticsearch
+      host elasticsearch001
+      port 9200
+      type_name flask_fluentd
+      logstash_format true
+    </store>
   </match>
 </label>
 <label @sql>
@@ -50,5 +61,3 @@
     time_format       %Y%m%dT%H%M%S%z
   </match>
 </label>
-
-
