--- a/docker/flask_image/docker-compose.yml
+++ b/docker/flask_image/docker-compose.yml
@@ -100,6 +100,21 @@ services:
     #  - /root/dockerfiles/001_python_tool/elasticsearch/data:/usr/share/elasticsearch/data
     networks:
       - backend
+  kibana:
+    image: kibana:flask
+    hostname: kibana
+    container_name: kibana1
+    environment:
+        SERVER_NAME: "kibana"
+        ELASTICSEARCH_HOSTS: "http://es01:9200"
+        ELASTICSEARCH_REQUESTTIMEOUT: "60000"
+    ports:
+        - "5601:5601/tcp"
+    networks:
+      - backend
+    depends_on:
+        - es01
+        - es02
 networks:
     backend:
 
