--- a/docker/flask_image/docker-compose.yml
+++ b/docker/flask_image/docker-compose.yml
@@ -106,10 +106,12 @@ services:
     container_name: kibana1
     environment:
         SERVER_NAME: "kibana"
-        ELASTICSEARCH_HOSTS: "http://es01:9200"
+        ELASTICSEARCH_HOSTS: "http://elasticsearch001:9200"
         ELASTICSEARCH_REQUESTTIMEOUT: "60000"
     ports:
         - "5601:5601/tcp"
+    volumes:
+      - /root/dockerfiles/001_python_tool/setup:/usr/share/kibana/config
     networks:
       - backend
     depends_on:
