--- a/docker/flask_image/docker-compose.yml
+++ b/docker/flask_image/docker-compose.yml
@@ -65,8 +65,8 @@ services:
       #- discovery.type=single-node
       - node.name=elasticsearch001
       - cluster.name=elasticsearch-cluster
-      - discovery.seed_hosts=elasticsearch002 #,es03
-      - cluster.initial_master_nodes=elasticsearch001,elasticsearch002 #,es02,es03
+      - discovery.seed_hosts=elasticsearch002,elasticsearch003
+      - cluster.initial_master_nodes=elasticsearch001,elasticsearch002,elasticsearch003
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms128m -Xmx128m"
     ulimits:
@@ -88,8 +88,27 @@ services:
       #- discovery.type=single-node
       - node.name=elasticsearch002
       - cluster.name=elasticsearch-cluster
-      - discovery.seed_hosts=elasticsearch001
-      - cluster.initial_master_nodes=elasticsearch001,elasticsearch002 #,es02,es03
+      - discovery.seed_hosts=elasticsearch001,elasticsearch003
+      - cluster.initial_master_nodes=elasticsearch001,elasticsearch002,elasticsearch003
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms128m -Xmx128m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    #volumes:
+    #  - /root/dockerfiles/001_python_tool/elasticsearch/data:/usr/share/elasticsearch/data
+    networks:
+      - backend
+  es03:
+    image: elasticsearch:flask
+    container_name: elasticsearch003
+    environment:
+      #- discovery.type=single-node
+      - node.name=elasticsearch003
+      - cluster.name=elasticsearch-cluster
+      - discovery.seed_hosts=elasticsearch001,elasticsearch002
+      - cluster.initial_master_nodes=elasticsearch001,elasticsearch002,elasticsearch003
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms128m -Xmx128m"
     ulimits:
@@ -106,7 +125,7 @@ services:
     container_name: kibana1
     environment:
         SERVER_NAME: "kibana"
-        ELASTICSEARCH_HOSTS: "http://elasticsearch001:9200"
+        #ELASTICSEARCH_HOSTS: "http://elasticsearch001:9200"
         ELASTICSEARCH_REQUESTTIMEOUT: "60000"
     ports:
         - "5601:5601/tcp"
