update : use prefix and es multi output

--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -18,6 +18,8 @@
   @type stdout
 </filter>
 
+
+
 <label @mainstream>
   <match **>
     @type file
@@ -43,10 +45,10 @@
     </store>
     <store>
       @type elasticsearch
-      host elasticsearch001
-      port 9200
+      hosts elasticsearch001:9200,elasticsearch002:9200,elasticsearch003:9200
       type_name flask_fluentd
       logstash_format true
+      logstash_prefix flask-app
     </store>
   </match>
 </label>
