--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -9,6 +9,16 @@
   port 24221
 </source>
 <source>
+  @type forward
+  @label @metrix
+  port 24222
+</source>
+<source>
+  @type forward
+  @label @kibanalog
+  port 24223
+</source>
+<source>
   @type http
   @label @mainstream
   port 24280
