update : kibana refuctoring

--- a/docker/flask_image/docker-compose.yml
+++ b/docker/flask_image/docker-compose.yml
@@ -143,7 +143,8 @@ services:
     ports:
         - "5601:5601/tcp"
     volumes:
-      - /root/dockerfiles/001_python_tool/setup:/usr/share/kibana/config
+      - /root/dockerfiles/001_python_tool/setup/kibana/config:/usr/share/kibana/config
+      - /root/dockerfiles/001_python_tool/setup/kibana/td-agent:/etc/td-agent
     networks:
       - backend
     depends_on:
