--- a/docker/flask_image/docker-compose.yml
+++ b/docker/flask_image/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       # default port 5140/tcp,24224/tcp
       - '24220'
       - '24221'
+      - '24222'
+      - '24223'
       - '24280'
     volumes:
       - /root/dockerfiles/001_python_tool/setup:/setup:ro
@@ -143,8 +145,9 @@ services:
     ports:
         - "5601:5601/tcp"
     volumes:
+      - /root/dockerfiles/001_python_tool/setup:/setup:ro
       - /root/dockerfiles/001_python_tool/setup/kibana/config:/usr/share/kibana/config
-      - /root/dockerfiles/001_python_tool/setup/kibana/td-agent:/etc/td-agent
+      #- /root/dockerfiles/001_python_tool/setup/kibana/td-agent:/etc/td-agent
     networks:
       - backend
     depends_on:
