--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -10,11 +10,6 @@
 </source>
 <source>
   @type forward
-  @label @metrix
-  port 24222
-</source>
-<source>
-  @type forward
   @label @kibanalog
   port 24223
 </source>
@@ -35,6 +30,17 @@
     @type file
     @id   output1
     path         /fluentd/log/data.*.log
+    append       true
+    time_slice_format %Y%m%d%H
+    time_slice_wait   1m
+    time_format       %Y%m%dT%H%M%S%z
+  </match>
+</label>
+<label @kibanalog>
+  <match **>
+    @type file
+    @id   output_kibanalog
+    path         /fluentd/log/kibanalog.*.log
     append       true
     time_slice_format %Y%m%d%H
     time_slice_wait   1m
