--- a/docker/flask_image/fluentd/etc/fluent.conf
+++ b/docker/flask_image/fluentd/etc/fluent.conf
@@ -10,6 +10,11 @@
 </source>
 <source>
   @type forward
+  @label @elasticsearchlog
+  port 24222
+</source>
+<source>
+  @type forward
   @label @kibanalog
   port 24223
 </source>
@@ -36,11 +41,22 @@
     time_format       %Y%m%dT%H%M%S%z
   </match>
 </label>
+<label @elasticsearchlog>
+  <match **>
+    @type file
+    @id   output_elasticsearchlog
+    path         /fluentd/log/elasticsearch.*.log
+    append       true
+    time_slice_format %Y%m%d%H
+    time_slice_wait   1m
+    time_format       %Y%m%dT%H%M%S%z
+  </match>
+</label>
 <label @kibanalog>
   <match **>
     @type file
     @id   output_kibanalog
-    path         /fluentd/log/kibanalog.*.log
+    path         /fluentd/log/kibana.*.log
     append       true
     time_slice_format %Y%m%d%H
     time_slice_wait   1m
