--- a/docker/flask_image/setup/kibana/config/kibana.yml
+++ b/docker/flask_image/setup/kibana/config/kibana.yml
@@ -5,5 +5,5 @@ elasticsearch.hosts:
   - http://elasticsearch001:9200
   - http://elasticsearch002:9200
   - http://elasticsearch003:9200
-logging.dest: /tmp/kibana.log
+#logging.dest: /tmp/kibana.log
 xpack.monitoring.ui.container.elasticsearch.enabled: true
