--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -44,11 +44,13 @@ services:
     networks:
       - backend
     volumes:
-      - /root/dockerfiles/001_python_tool/setup/mysql_setup:/docker-entrypoint-initdb.d
+      - /root/dockerfiles/001_python_tool/setup/mysql:/docker-entrypoint-initdb.d
+      - /root/dockerfiles/001_python_tool/setup:/setup:ro
     environment:
       MYSQL_ROOT_PASSWORD: ${root_pass}
     depends_on:
       - "fluentd"
+    #command: "sh /setup/setup_rps_mysql.sh"
   fluentd:
     image: fluentd:flask
     init: true
