--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -39,18 +39,18 @@ services:
       - "mysql"
   mysql:
     image: mysql:flask 
+    command: --default-authentication-plugin=mysql_native_password
     init: true
     container_name: mysql
     networks:
       - backend
     volumes:
       - /root/dockerfiles/001_python_tool/setup/mysql:/docker-entrypoint-initdb.d
-      - /root/dockerfiles/001_python_tool/setup:/setup:ro
+      - /root/dockerfiles/001_python_tool/setup:/setup
     environment:
       MYSQL_ROOT_PASSWORD: ${root_pass}
     depends_on:
       - "fluentd"
-    #command: "sh /setup/setup_rps_mysql.sh"
   fluentd:
     image: fluentd:flask
     init: true
