--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -23,7 +23,9 @@ services:
     networks:
       - backend
     volumes:
-      - /root/dockerfiles/001_python_tool/setup:/setup:ro
+      - /root/dockerfiles/001_python_tool/setup/flask:/setup:ro
+    environment:
+      root_password: ${root_pass}
     depends_on:
       - "mysql"
   app002:
@@ -34,7 +36,9 @@ services:
     networks:
       - backend
     volumes:
-      - /root/dockerfiles/001_python_tool/setup:/setup:ro
+      - /root/dockerfiles/001_python_tool/setup/flask:/setup:ro
+    environment:
+      root_password: ${root_pass}
     depends_on:
       - "mysql"
   mysql:
