--- a/docker/003_ansible/inventory.ini
+++ b/docker/003_ansible/inventory.ini
@@ -1,2 +1,5 @@
 [all_servers]
 192.168.1.241 ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa_grun
+
+[vert]
+192.168.1.241 ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa_grun
