update : add docker host ip

--- a/docker/003_ansible/inventory.ini
+++ b/docker/003_ansible/inventory.ini
@@ -3,3 +3,7 @@
 
 [vert]
 192.168.1.241 ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa_grun
+
+[docker_host]
+192.168.1.241 ansible_ssh_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa_grun
+
