--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     expose:
       - '8080'
     volumes:
-      - /root/dockerfiles/001_python_tool/setup:/setup:ro
+      - /dockerroot/setup:/setup:ro
     depends_on:
       - "app001"
       - "app002"
@@ -23,7 +23,7 @@ services:
     networks:
       - backend
     volumes:
-      - /root/dockerfiles/001_python_tool/setup/flask:/setup:ro
+      - /dockerroot/setup/flask:/setup:ro
     environment:
       root_password: ${root_pass}
     depends_on:
@@ -36,7 +36,7 @@ services:
     networks:
       - backend
     volumes:
-      - /root/dockerfiles/001_python_tool/setup/flask:/setup:ro
+      - /dockerroot/setup/flask:/setup:ro
     environment:
       root_password: ${root_pass}
     depends_on:
@@ -49,8 +49,8 @@ services:
     networks:
       - backend
     volumes:
-      - /root/dockerfiles/001_python_tool/setup/mysql:/docker-entrypoint-initdb.d
-      - /root/dockerfiles/001_python_tool/setup:/setup
+      - /dockerroot/setup/mysql:/docker-entrypoint-initdb.d
+      - /dockerroot/setup:/setup
     environment:
       MYSQL_ROOT_PASSWORD: ${root_pass}
     depends_on:
@@ -72,8 +72,8 @@ services:
       - '24223'
       - '24280'
     volumes:
-      - /root/dockerfiles/001_python_tool/setup:/setup:ro
-      - /root/dockerfiles/001_python_tool/fluentd:/fluentd
+      - /dockerroot/setup:/setup:ro
+      - /dockerroot/setup/fluentd:/fluentd
   es01:
     image: elasticsearch:flask
     init: true
@@ -91,7 +91,7 @@ services:
         soft: -1
         hard: -1
     #volumes:
-    #  - /root/dockerfiles/001_python_tool/elasticsearch/data:/usr/share/elasticsearch/data
+    #  - /dockerroot/elasticsearch/data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
     expose:
@@ -115,7 +115,7 @@ services:
         soft: -1
         hard: -1
     #volumes:
-    #  - /root/dockerfiles/001_python_tool/elasticsearch/data:/usr/share/elasticsearch/data
+    #  - /dockerroot/elasticsearch/data:/usr/share/elasticsearch/data
     ports:
       - 9201:9200
     networks:
@@ -137,7 +137,7 @@ services:
         soft: -1
         hard: -1
     #volumes:
-    #  - /root/dockerfiles/001_python_tool/elasticsearch/data:/usr/share/elasticsearch/data
+    #  - /dockerroot/elasticsearch/data:/usr/share/elasticsearch/data
     ports:
       - 9202:9200
     networks:
@@ -159,9 +159,9 @@ services:
     ports:
         - "5601:5601/tcp"
     volumes:
-      - /root/dockerfiles/001_python_tool/setup:/setup:ro
-      - /root/dockerfiles/001_python_tool/setup/kibana/config:/usr/share/kibana/config
-    #  - /root/dockerfiles/001_python_tool/setup/kibana/td-agent:/etc/td-agent
+      - /dockerroot/setup:/setup:ro
+      - /dockerroot/setup/kibana/config:/usr/share/kibana/config
+    #  - /dockerroot/setup/kibana/td-agent:/etc/td-agent
     networks:
       - backend
     depends_on:
