--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -159,7 +159,7 @@ services:
     ports:
         - "5601:5601/tcp"
     volumes:
-      - /dockerroot/setup:/setup:ro
+      - /dockerroot/setup/kibana:/setup:ro
       - /dockerroot/setup/kibana/config:/usr/share/kibana/config
     #  - /dockerroot/setup/kibana/td-agent:/etc/td-agent
     networks:
