--- a/docker/003_ansible/001_vert_setting/docker_install.yml
+++ b/docker/003_ansible/001_vert_setting/docker_install.yml
@@ -1,6 +1,6 @@
 # https://qiita.com/yukin01/items/dd1cfc07abefd6a13aa5
 
-- name: yum update
+- name: apt update
   hosts: vert
   tasks:
   - name: apt update
