--- a/docker/001_flask_image/setup/dockerfile_fluentd.df
+++ b/docker/001_flask_image/setup/dockerfile_fluentd.df
@@ -1,3 +1,4 @@
-FROM fluent/fluentd:latest
-
+FROM fluent/fluentd:v1.13.0-debian-arm64-1.0
+USER root
 RUN gem install fluent-plugin-elasticsearch
+USER fluent
