update : add docker compose installing

--- a/docker/003_ansible/001_vert_setting/install_pkg_in_python.yml
+++ b/docker/003_ansible/001_vert_setting/install_pkg_in_python.yml
@@ -26,7 +26,10 @@
       name: docker
     become: yes
 
-
+  - name: Installing docker compose
+    pip:
+      name: docker-compose
+      state: present
 
 
 
