update : adjust for arm64

--- a/docker/001_flask_image/setup/dockerfile_fluentd.df
+++ b/docker/001_flask_image/setup/dockerfile_fluentd.df
@@ -1,4 +1,5 @@
 FROM fluent/fluentd:v1.13.0-debian-arm64-1.0
 USER root
 RUN gem install fluent-plugin-elasticsearch
-USER fluent
+ENTRYPOINT ["tini",  "--", "/bin/entrypoint.sh"]
+CMD ["fluentd"]
