update : adjust for arm64

--- a/docker/001_flask_image/setup/dockerfile_flask.df
+++ b/docker/001_flask_image/setup/dockerfile_flask.df
@@ -20,14 +20,14 @@ RUN yum install cronie -y
 
 RUN pip3 install fluent-logger
 
-ENV LC_ALL en_US.UTF-8
+
+RUN localedef -f UTF-8 -i en_US en_US.utf8 # error fix for setlocale
+
+ENV LC_ALL en_US.utf8
+
 ENV FLASK_APP /flask_base.py
 
 ENTRYPOINT  source /setup/setup_rps_flask.sh
-
-
-
-
 
 
 
