--- a/docker/001_flask_image/setup/dockerfile_kibana.df
+++ b/docker/001_flask_image/setup/dockerfile_kibana.df
@@ -1,4 +1,4 @@
-FROM docker.elastic.co/kibana/kibana:7.12.0
+FROM docker.elastic.co/kibana/kibana:7.13.4-arm64
 
 #USER root
 #RUN yum install sudo -y
