--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - "mysql"
   mysql:
     image: mysql:rps 
+    platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     init: true
     container_name: mysql
@@ -50,7 +51,7 @@ services:
       - backend
     volumes:
       - /dockerroot/setup/mysql:/docker-entrypoint-initdb.d
-      - /dockerroot/setup:/setup
+    #  - /dockerroot/setup/mysql:/setup
     environment:
       MYSQL_ROOT_PASSWORD: ${root_pass}
     depends_on:
