--- a/docker/001_flask_image/docker-compose.yml
+++ b/docker/001_flask_image/docker-compose.yml
@@ -47,7 +47,6 @@ services:
       - "mysql"
   mysql:
     image: mysql:rps 
-    platform: linux/x86_64
     command: --default-authentication-plugin=mysql_native_password
     init: true
     container_name: mysql
@@ -57,6 +56,7 @@ services:
       - /dockerroot/setup/mysql:/docker-entrypoint-initdb.d
     #  - /dockerroot/setup/mysql:/setup
     environment:
+      MYSQL_DATABASE: rps
       MYSQL_ROOT_PASSWORD: ${ROOT_PASS}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${STD_PASS}
